# jetson_facelock

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 159a5b93267b_create_user_table.py  2a1a5e3776b6_create_door_table.py  3f9c1d2e4b5a_add_mqtt_id_to_door.py  57b2ec0178b4_add_face_vector_table_remove_face_.py  8c3d9e1f2a4b_add_user_status.py
backend/scripts/: download_models.py  openapi-export.py
backend/src/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
backend/src/core/: access.py  config.py  database.py  exceptions.py  security.py
backend/src/doors/: models.py  router.py  schemas.py  service.py
backend/src/faces/: engine.py  models.py  router.py  schemas.py  service.py
backend/src/users/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_admin_seed.py  test_auth.py  test_auth_dependencies.py  test_auth_router.py  test_auth_schemas.py  test_auth_service.py  test_auth_utils.py  test_config.py  test_database.py  test_doors_router.py  test_doors_schemas.py  test_doors_service.py  test_exceptions.py  test_faces_engine.py  test_faces_router.py  test_faces_schemas.py  test_faces_service.py  test_fixtures.py  test_main.py  test_security.py  test_user_model.py  test_users.py  test_users_router.py  test_users_schemas.py  test_users_service.py
docs/: commit-msg.md  pre-commit.md
firmware/: .gitignore  CMakeLists.txt  lwipopts.h  main.c  (+2 more)
(+139 files in other folders)
